--- a/css/main.css
+++ b/css/main.css
@@ -77,20 +77,19 @@ p {
 }
 
 b {
-  
   font-family: 'graphik-web-medium', helvetica, sans-serif;
   font-weight: normal;}
 
 /* Links */
 a {
-    color: #888;
-    word-wrap: break-word;
-    cursor: pointer;
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+  color: #888;
+  word-wrap: break-word;
+  cursor: pointer;
+  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+  transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
 a:hover,
@@ -116,64 +115,14 @@ a:after {
   color: #000;
 }
 
-.nav {
-    font-family: 'graphik-web-regular', helvetica, sans-serif;
-    font-weight: normal;
-    letter-spacing: .4px;
-    font-size: 16px;
-}
 
 .navbar {
   margin-bottom: 0px;
     padding: 40px 0px;
 }
 
-.navbar-toggle .icon-bar {
-  background-color: #5c5c5c;
-}
 a.active {
     font-family: 'graphik-web-medium';
-}
-.progress-bar-theme {
-  background-color: #1abc9c;
-}
-
-.nav > li > a:hover, .nav > li > a:focus {
-  background-color: transparent;
-}
-
-.nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
-  background: none;
-}
-
-.dropdown-menu {
-  box-shadow: 0px 0px 4px 0px rgba(0,0,0,.1);
-  border-radius: 3px;
-}
-
-ul.dropdown-menu li {
-  padding: 3px 0px;
-}
-
-ul.dropdown-menu {
-  padding: 0px;
-}
-
-.navbar-nav>li>.dropdown-menu {
-  background: #fafafa;
-  border: none;
-  text-align: right;
-  padding: 14px 3px 12px 16px;
-}
-
-@media (max-width: 767px) {
-  .nav {
-    text-align: right;
-  }
-}
-
-.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
-  background: none;
 }
 
 .hero-background-image {
@@ -200,176 +149,26 @@ section.about-me {
   max-width: 600px;
 }
 
-.home-project-title {
-  color: #666;
-  margin-top: 6px;
-  font-size: 17px;
-}
-
-/* Helpers */
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #e5e5e5;
-  margin: 1em 0;
-  padding: 0;
-}
-
 .grey {
   color: #666;
 }
 
-.mt {
-	margin-top: 30px;
-	margin-bottom: 30px;
+/* -----
+SVG Icons - svgicons.sparkk.fr
+----- */
+
+.svg-icon {
+  width: 1em;
+  height: 1em;
 }
 
-@media only screen and (max-width : 992px){
-  .mt {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
+.svg-icon path,
+.svg-icon polygon,
+.svg-icon rect {
+  fill: #4691f6;
 }
 
-.centered {
-  text-align: center;
-}
-
-h1.title {
-  margin: 20px 0 6px;
-}
-/* +++++ Project Page +++++ */ 
-h2.sub-title {
-  max-width: 770px;
-  line-height: 1.5em;
-  margin: 10px auto 30px;
-}
-
-.project-description h1 {
-  margin: 0 0 15px;
-}
-.project-description h2 {
-  color: #000;
-  margin-bottom: 15px;
-}
-.project-description h2 a {
-color: #666;
-}
-.project-description p {
-  color: #666;
-}
-
-.project-image {
-  margin-bottom: 60px;
-}
-
-.project-description {
-  text-align: left;
-  border-bottom: 1px solid #e5e5e5;
-  border-top: 1px solid #e5e5e5;
-  margin: 60px 0px 60px;
-  padding: 60px 0px 40px;
-}
-
-.inline-desc {
-  padding: 20px 0 80px;
-  max-width: 770px;
-  margin: 0 auto;
-  line-height: 1.7em;
-  color: #666;
-}
-
-.inline-desc a {
-  font-size: 14px;  
-}
-
-.clear-block {
-position: relative;
-margin-bottom: 100px;
-}
-
-@media only screen and (max-width : 992px){
-  .project-pagination  {
-    text-align: center; 
-    margin-bottom: 40px;
-  }
-}
-/* work footer */
-.work-footer {
-  overflow: auto;
-  margin: 0px 0px 60px;
-  padding: 0px 0px 40px;
-}
-
-#work-footer p {
-  margin-bottom: 0px;
-}
-
-#footer {
-  margin-top: 20px; 
-  padding-top: 50px;
-	padding-bottom: 50px; 
-}
-
-#footer p {
-  font-size: 14px;
-  color: #666;
-  margin-bottom: 10px;
-}
-
-.img-responsive {
-	width:100%;
-}
-
-/* to be deleted */
-
-.gif-mac {
-    position: relative;
-}
-.gif-screen {
-position: absolute;
-  top: 0;
-  z-index: -1;
-}
-.garyb-gif-mac {
-    position: absolute;
-}
-.garyb-gif-screen {
-  position: relative;
-  padding-top: 77px;
-  z-index: -1;
-  max-width: 734px;
-  margin: 0 auto;
-  padding-bottom: 220px;
-}
-@media only screen and (max-width : 1200px){
-  .garyb-gif-screen {
-  padding-top: 69px;
-  max-width: 648px;
-  }
-}
-@media only screen and (max-width : 992px){
-  .garyb-gif-screen {
-    padding-top: 52px;
-  max-width: 498px;
-  padding-bottom: 180px;
-  }
-}
-@media only screen and (max-width : 480px){
-  .garyb-gif-screen {
-    padding-top: 0px;
-  max-width: 300px;
-  padding-bottom: 100px;
-  }
-}
-
-iframe {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  border: 0;
-  z-index: -1;
+.svg-icon circle {
+  stroke: #4691f6;
+  stroke-width: 1;
 }
