--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,40 @@ a:focus {
     color: #1BD9A9;
 }
 
+input {
+  padding: 8px 8px;
+  border-radius: 2px;
+  min-width: 230px;
+  border: 1px solid #e5e5e5;
+}
+
+label {
+  display: block;
+  max-width: 100%;
+  font-size: 16px;
+  font-family: 'graphik-web-regular', helvetica, sans-serif;
+  margin-bottom: 5px;
+  font-weight: 400;
+}
+
+input[type=submit] {
+  background: #1BD9A9;
+  display: block;
+  border: none;
+  height: 42px;
+  font-size: 16px;
+  font-family: 'graphik-web-regular', helvetica, sans-serif;
+}
+
+#mc_embed_signup {
+  background: transparent !important;
+}
+
+.mc-field-group {
+  font-family: 'graphik-web-regular', helvetica, sans-serif;
+  margin-bottom: 30px;
+}
+
 a:before,
 a:after {
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
