--- a/css/main.css
+++ b/css/main.css
@@ -32,14 +32,14 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 body {
-	background-color: white;
+  background-color: white;
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
   color: #000;
 }
 
 h1 {
-	margin: 0 0 10px;
+  margin: 0 0 10px;
   font-family: 'graphik-web-medium', helvetica, sans-serif;
   font-weight: normal;
   letter-spacing: .4px;
@@ -68,7 +68,7 @@ h3 {
 }
 
 .green {
-  color: #1BD9A9;
+  color: #18C297;
 }
 
 .pink {
@@ -100,7 +100,7 @@ b {
 
 /* Links */
 a {
-  color: #1BD9A9;
+  color: #18C297;
   word-wrap: break-word;
   cursor: pointer;
 }
@@ -128,6 +128,13 @@ label {
   font-family: 'graphik-web-regular', helvetica, sans-serif;
   margin-bottom: 9px !important;
   font-weight: 400;
+}
+
+ul {
+  font-size: 18px;
+  line-height: 2;
+  font-family: 'graphik-web-regular', helvetica, sans-serif;
+  max-width: 700px;
 }
 
 #mc_embed_signup form {
@@ -215,6 +222,7 @@ hr {
   color: #666;
   font-size: 14px;
   line-height: 2;
+  margin-bottom: 10px;
 }
 
 /* -----
