--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,9 @@ h1 {
   font-family: 'graphik-web-medium', helvetica, sans-serif;
   font-weight: normal;
   letter-spacing: .4px;
-  font-size: 19px;
+  font-size: 21px;
   color: #000;
-  line-height: 1.4em;
+  line-height: 0.9em;
 }
 
 h2 {
@@ -64,7 +64,7 @@ h3 {
   
   font-weight: 600;
   letter-spacing: 1px;
-  margin: 0px 0 40px;
+  margin: 0px 0 32px;
 }
 
 .green {
@@ -273,7 +273,8 @@ SVG Icons - svgicons.sparkk.fr
   transition: all .2s ease-in-out;
   padding: 32px;
   height: 100%;
-  border: 1px solid #AAE4D7;
+  border: 2px solid #AAE4D7;
+  border-radius: 3px;
   background: rgba(255,255,255,.7);
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -292,7 +293,7 @@ SVG Icons - svgicons.sparkk.fr
 }
 
 .featured-work:first-child {
-  border: 1px solid #C4BBFF;
+  border: 2px solid #C4BBFF;
   margin: 0px 16px 0 0;
 }
 
@@ -302,8 +303,9 @@ SVG Icons - svgicons.sparkk.fr
   }
 }
 
-.featured-work:first-child .featured-work-title {
-  color: #5934f6;
+.featured-work:first-child .featured-work-title,
+.featured-work:first-child h2 a {
+  color: #5934f6 !important;
 }
 
 .featured-work:first-child .featured-work-link {
@@ -337,3 +339,15 @@ SVG Icons - svgicons.sparkk.fr
   font-size: 14px;
 }
 
+.profiler-container {
+  border-radius: 50%;
+  float: left;
+  overflow: hidden;
+  width: 48px;
+  height: 48px;
+  margin: -2px 17px 0 0;
+    border: 2px solid #1BD9A9;
+}
+.profiler {
+  width: 100%
+}
