--- a/css/main.css
+++ b/css/main.css
@@ -309,6 +309,14 @@ hr {
   }
 }
 
+.btn {
+  background-color: #6772E5;
+  color: #FFF;
+  padding: 12px 16px;
+  border: 0;
+  border-radius: 4px;
+}
+
 .footer {
   border-top: 1px solid #e8e7e4;
   padding-top: 32px;
