--- a/css/main.css
+++ b/css/main.css
@@ -202,11 +202,12 @@ ul {
 a.nav-item {
   border-bottom: none;
   margin-left: 20px;
+  color: #aaa;
 }
 
 a.nav-item-active,
 a.nav-item:hover {
-  color: #635bff;
+  color: #232323;
 }
 
 hr {
@@ -248,6 +249,14 @@ hr {
   .featured-works {
     grid-template-columns: 100%;
   }
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.mb-4 {
+  margin-bottom: 12px;
 }
 
 .featured-work {
@@ -312,7 +321,7 @@ hr {
 }
 
 .btn {
-  background-color: #6772E5;
+  background-color: #232323;
   color: #FFF;
   padding: 12px 16px;
   border: 0;
